--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,10 @@ span {
   text-align: center;
 }
 
+#header > span:first-of-type {
+  color: #ff0000;
+}
+
 /* Media queries to handle various device widths */
 
 @media only screen and (max-width: 1024px) {
